--- a/Curriculo/tsconfig.json
+++ b/Curriculo/tsconfig.json
@@ -21,7 +21,7 @@
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
-      "dom"
+      "es5", "es6", "dom", "dom.iterable"
     ]
   },
   "angularCompilerOptions": {
